fixed about me css, moved button, fixed spacing issues, and updated div in html

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ img#cass-fullcolor{
     line-height: 80px;
 }
 
-img.bottomright {
+img#bottomright {
   margin-left: 1120px;
   margin-bottom: 4px;
 }
@@ -176,6 +176,68 @@ img.bottomright {
   padding: 5px;
 }
 
+/*--About Me--*/
+.about-me{
+  max-width: 1000px;
+  min-height: 350px;
+  margin: auto;
+}
+
+.get-to-know-me{
+  max-width: 800px;
+  min-height: 350px;
+  margin: auto;
+}
+
+.get-to-know-me h1 {
+  font-size: 45px;
+}
+
+.get-to-know-me p {
+    color: #797979;
+    font-size: 20px;
+    line-height: 36px;
+}
+
+img#cass4 {
+    float: left;
+    padding-right: 26px;
+    margin-top: 40px;
+    padding-bottom: 2px;
+}
+
+.see-work {
+    border-radius: 5px;
+    background: #F075AC;
+    padding: 18px;
+    margin-left: 792px;
+    box-shadow: 10px 10px 10px -3px grey;
+    text-align: center;
+    margin-top: 81px;
+    max-width: 145px;
+    display: inline-block;
+}
+
+.see-work a{
+  color: white;
+  text-decoration: none;
+  padding: 5px;
+}
+
+/* hover link */
+.see-work :hover {
+    background-color: gray;
+    color: white;
+    border-radius: 5px;
+    padding: 11px;
+    text-align: center;
+    max-width: 100%;
+}
+
+.see-work a{
+  text-decoration: none;
+  padding: 5px;
+}
 
 /*--Contact Form--*/
 form.contact_form{
